tests/paczka1/small_fuzzy/97729173.err
Error in line 2: XoHO9gi A552 54,0
Error in line 1: ITdjaQ A34 57,6
